--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-konva": "^19.0.7"
+    "react-konva": "^19.0.7",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
