--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "gsap": "^3.13.0",
     "konva": "^9.3.22",
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-konva": "^19.0.7",
+    "use-image": "^1.1.4",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
