--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
+    "@supabase/supabase-js": "^2.54.0",
     "gsap": "^3.13.0",
     "konva": "^9.3.22",
     "next": "15.4.4",
